--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -20,6 +20,9 @@ server {
 
   root /srv/www/radiodns-uk/public;
 
+  # Make responses cacheable for 1 hour
+  add_header Cache-Control "public, max-age=3600";
+
   try_files $uri @ruby_app;
   location @ruby_app {
     proxy_set_header X-Forwarded-Proto $scheme;
