Fix for Ansible bundler: chdir to correct directory

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -69,6 +69,7 @@
   - name: 'Ensure ruby bundle is up to date'
     bundler:
       state: present
+      chdir: /srv/www/radiodns-uk
       exclude_groups: development
       deployment_mode: yes
 
