Wrote script for generating GeoJSON files containing UK county boundaries

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -12,6 +12,7 @@
         - nginx
         - ruby
         - bundler
+        - python-gdal
       state: present
 
   - name: "Ensure group radiodns-uk exists"
