Use county names and ids from CSV in GeoJSON files

--- a/counties/east-lothian.json
+++ b/counties/east-lothian.json
@@ -1,7 +1,10 @@
 {
   "type": "Feature", 
   "properties": {
-    "name": "East Lothian"
+    "name": "East Lothian", 
+    "country": "Scotland", 
+    "wikidata-id": "Q207257", 
+    "osm-relation-id": null
   }, 
   "geometry": {
     "type": "MultiPolygon", 
