Fix for redirects in Nginx config (they were breaking the ACME challenge response)

--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -14,8 +14,10 @@ server {
   }
 
   # Set redirects to expire in 1 year
-  add_header Cache-Control "public, max-age=31536000";
-  return 301 https://www.radiodns.uk$request_uri;
+  location / {
+    add_header Cache-Control "public, max-age=31536000";
+    return 301 https://www.radiodns.uk$request_uri;
+  }
 }
 
 # Redirect apex to www
@@ -31,8 +33,10 @@ server {
   include /etc/nginx/conf.d/modern-ssl.inc;
 
   # Set redirects to expire in 1 year
-  add_header Cache-Control "public, max-age=31536000";
-  return 301 https://www.radiodns.uk$request_uri;
+  location / {
+    add_header Cache-Control "public, max-age=31536000";
+    return 301 https://www.radiodns.uk$request_uri;
+  }
 }
 
 server {
@@ -48,7 +52,7 @@ server {
 
   # Original request was over HTTP, redirect to HTTPS
   if ($http_x_forwarded_proto = 'http') {
-   return 301 https://www.radiodns.uk$request_uri;
+    return 301 https://www.radiodns.uk$request_uri;
   }
 
   try_files $uri @ruby_app;
